--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.383.0",
     "nuxt": "^3.11.2",
+    "nuxt-og-image": "3.0.0-rc.61",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.27",
