--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.13.2",
     "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@tailwindcss/typography": "^0.5.13",
     "nuxt": "^3.12.4",
     "nuxt-icon": "^0.6.10",
     "shadcn-nuxt": "^0.10.4"
